deployment/client-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-service-deployment-label
  template:
    metadata:
      labels:
        app: client-service-deployment-label
    spec:
      containers:
        - name: client-service-container
          image: andorkovacs/todos-client-service
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client-service-deployment-label
  type: ClusterIP
  ports:
    - name: client-service-cluster-ip-port-name
      protocol: TCP
      port: 3000
      targetPort: 3000
