deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: 'todos.andorkovacs.online'
      http:
        paths:
          - path: '/api/notification-service'
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8082
          - path: '/api/task-service'
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 8081
          - path: '/api/user-service'
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - path: '/?(.*)'
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 3000
